# vite-task

./: .oxfmtrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  pnpm-lock.yaml
.github/workflows/: ci.yml
crates/fspy/: Cargo.toml
crates/fspy/src/: command.rs  error.rs  lib.rs
crates/fspy/src/unix/: mod.rs
crates/fspy/src/windows/: mod.rs
crates/fspy_e2e/: Cargo.toml
crates/fspy_preload_unix/: Cargo.toml
crates/fspy_preload_windows/: Cargo.toml
crates/fspy_seccomp_unotify/: Cargo.toml
crates/fspy_shared/: Cargo.toml
crates/fspy_shared/src/ipc/: mod.rs
crates/fspy_shared_unix/: Cargo.toml
crates/fspy_shared_unix/src/: payload.rs
crates/preload_test_lib/: Cargo.toml
crates/snapshot_test/: Cargo.toml  README.md
crates/snapshot_test/src/: lib.rs
crates/vite_path/src/: relative.rs
crates/vite_select/src/: interactive.rs
crates/vite_shell/: Cargo.toml
crates/vite_shell/src/: lib.rs
crates/vite_task/: Cargo.toml
crates/vite_task/src/: error.rs  lib.rs
crates/vite_task/src/cli/: mod.rs
crates/vite_task/src/session/: mod.rs
crates/vite_task_bin/: Cargo.toml
crates/vite_task_bin/src/: lib.rs  main.rs
crates/vite_task_bin/src/vtt/: barrier.rs  cp.rs  exit_on_ctrlc.rs  main.rs  mkdir.rs  pipe_stdin.rs  print_env.rs  print_file.rs  replace_file_content.rs  rm.rs  touch_file.rs  write_file.rs
crates/vite_task_bin/tests/e2e_snapshots/: main.rs  redact.rs
crates/vite_task_graph/: Cargo.toml
crates/vite_task_graph/src/config/: user.rs
crates/vite_task_plan/: Cargo.toml
(+397 files in other folders)
