[package]
name = "snapshot_test"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
